--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "clsx": "^2.1.1",
     "googleapis": "^154.0.0",
     "lucide-react": "^0.525.0",
+    "mailparser": "^3.7.4",
     "next": "^15.4.2",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
@@ -53,6 +55,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.5.1",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/mailparser": "^3.4.6",
     "@types/node": "^20.19.9",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
